--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html lang="pt-br"><head>
-<meta charset="utf-8"/>
-<title>Acessos por Município</title>
-<style>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Acessos por Município</title>
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f4f8;
@@ -7765,3 +7768,10 @@ document.getElementById("exportExcel").addEventListener("click", () => {
 });
 </script>
 </body></html>
+
+</body>
+</html>
+
+
+
+
